Blender crashes when opening file - Older beta opens the file normal #62707

Closed
opened 2019-03-18 14:02:59 +01:00 by Marcus Papathoma · 15 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.91

Blender Version
Broken: version: 2.80 (sub 49), branch: blender2.7, commit date: 2019-03-17 23:25, hash: 9099305771
Worked: 3d8cbb534f (sub 42)

Short description of error
Blender crashes when opening file, older beta version (3d8cbb534f sub 42) opens the file normal.
The file was created with the build from today. Sorry, it think it is so big, because orphan data are not deleted anymore?
I imported an fbx. After that I saved the file. When I tried to reopen the file it wasn´t possible anymore.
For the attached file, I did nearly the same, I imported the fbx and deleted the hirarchie exept of a few parts because of secret client data!
Because you can´t get rid of orphan data anymore, only after saving and reopening the file, it stayed the same size as with all the data within.
When I open the file with the Blender 2.8 ((3d8cbb534f sub 42) and save it, it has only 20MB (with the orphan meshes inside).
Why stays the file size with the todys build the same after deleting nearly everything in the file unless saving, reopening the file and purgeing?The is something wrong?!

Exact steps for others to reproduce the error
Try to open the attached file with the lastes build.
Crash
Open the file with Blender 2.8 ((3d8cbb534f sub 42)
File opens normal
Rims_crash.blend

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.91 **Blender Version** Broken: version: 2.80 (sub 49), branch: blender2.7, commit date: 2019-03-17 23:25, hash: `9099305771` Worked: 3d8cbb534f82 (sub 42) **Short description of error** Blender crashes when opening file, older beta version (3d8cbb534f82 sub 42) opens the file normal. The file was created with the build from today. Sorry, it think it is so big, because orphan data are not deleted anymore? I imported an fbx. After that I saved the file. When I tried to reopen the file it wasn´t possible anymore. For the attached file, I did nearly the same, I imported the fbx and deleted the hirarchie exept of a few parts because of secret client data! Because you can´t get rid of orphan data anymore, only after saving and reopening the file, it stayed the same size as with all the data within. When I open the file with the Blender 2.8 ((3d8cbb534f82 sub 42) and save it, it has only 20MB (with the orphan meshes inside). Why stays the file size with the todys build the same after deleting nearly everything in the file unless saving, reopening the file and purgeing?The is something wrong?! **Exact steps for others to reproduce the error** Try to open the attached file with the lastes build. **Crash** Open the file with Blender 2.8 ((3d8cbb534f82 sub 42) File opens normal [Rims_crash.blend](https://archive.blender.org/developer/F6843573/Rims_crash.blend)

Added subscriber: @machieb

Added subscriber: @machieb

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Cant redo:

  • OS: Linux 5.0.2-arch1-1-ARCH
  • REV: 29039e5c7457c2061787d3f22dce27afcae25c71
  • GPU: GeForce GTX 1080

The file opens w/ 13 objects visible.

Cant redo: * OS: Linux 5.0.2-arch1-1-ARCH * REV: `29039e5c7457c2061787d3f22dce27afcae25c71` * GPU: `GeForce GTX 1080` ---- The file opens w/ 13 objects visible.

Maybe it is a Windows OS problem. I tried the file on three drifferent computer at work. two with windows 10 and a Geforce GTX 1080 Ti and one computer with Windows 7 and a Geforce 980/Geforce GTX Titan Black. On all three Blender crashes.

@ideasman42 : Can you tell me why 13 Objects with 178440 Tris make a file size of 2.3GB?
When deleting the outliner hirarchie in Blender 2.8 (3d8cbb534f sub 42) - (exact steps see above) and saving the file it is instantly only 15MB not 2.3GB as in todays build.
Try it yourself. Open a large file with lots of objects and geometry.
Delete the hirarchie except of a few objects. Save the file, with the todays build it stays nearly the same size. With older Blender 2.8 like (3d8cbb534f sub 42) the file is much smaller like expected.
In todays build you have to close the file reopen it, purge data, then save. Only then the file size becomes as expected. Is this now the wanted behaviour of Blender?

Maybe it is a Windows OS problem. I tried the file on three drifferent computer at work. two with windows 10 and a Geforce GTX 1080 Ti and one computer with Windows 7 and a Geforce 980/Geforce GTX Titan Black. On all three Blender crashes. @ideasman42 : Can you tell me why 13 Objects with 178440 Tris make a file size of 2.3GB? When deleting the outliner hirarchie in Blender 2.8 (3d8cbb534f82 sub 42) - (exact steps see above) and saving the file it is instantly only 15MB not 2.3GB as in todays build. Try it yourself. Open a large file with lots of objects and geometry. Delete the hirarchie except of a few objects. Save the file, with the todays build it stays nearly the same size. With older Blender 2.8 like (3d8cbb534f82 sub 42) the file is much smaller like expected. In todays build you have to close the file reopen it, purge data, then save. Only then the file size becomes as expected. Is this now the wanted behaviour of Blender?

Added subscribers: @LazyDodo, @ZedDB

Added subscribers: @LazyDodo, @ZedDB

Can't reproduce either (linux).

I think that the orphan data issue is related to: https://developer.blender.org/T62706

@LazyDodo can you reproduce the crash?

Can't reproduce either (linux). I think that the orphan data issue is related to: https://developer.blender.org/T62706 @LazyDodo can you reproduce the crash?

Added subscriber: @Phigon

Added subscriber: @Phigon

Windows 7, GTX 770, hash: dbfbd6b904
Blender crashes on load, when trying to append one of these four objects, or trying to append the scene (presumedly because the objects are in it)
['Reifen_18ZollShape_0xb8d1c610', 'Reifen_18ZollShape_0xb8d258e0', 'Reifen_18ZollShape_0xb724fae0', 'Reifen_18ZollShape_0xb7247230']

Windows 7, GTX 770, hash: dbfbd6b9043d Blender crashes on load, when trying to append one of these four objects, or trying to append the scene *(presumedly because the objects are in it)* ['Reifen_18ZollShape_0xb8d1c610', 'Reifen_18ZollShape_0xb8d258e0', 'Reifen_18ZollShape_0xb724fae0', 'Reifen_18ZollShape_0xb7247230']

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Cannot reproduce the crash here on macOS, even on a laptop with only 8 gigs of ram.

Cannot reproduce the crash here on macOS, even on a laptop with only 8 gigs of ram.

Added subscriber: @mont29

Added subscriber: @mont29
Ray molenkamp was assigned by Bastien Montagne 2019-03-18 21:54:21 +01:00

@ZedDB @machieb #62706 has been fixed now, here is a much smaller file, with all the orphaned meshes removed:

Rims_crash.blend

And cannot reproduce the crash either here, not even a single message in the console with a Debug build with asan enabled...

So guess we need a windows dev to check on that one.

@ZedDB @machieb #62706 has been fixed now, here is a much smaller file, with all the orphaned meshes removed: [Rims_crash.blend](https://archive.blender.org/developer/F6846067/Rims_crash.blend) And cannot reproduce the crash either here, not even a single message in the console with a Debug build with asan enabled... So guess we need a windows dev to check on that one.

This issue was referenced by 7ba82f3f0a

This issue was referenced by 7ba82f3f0a848aedcc0f3b3f73a429f740792dbe

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@ideasman42: Thank you very much, this solved my problem. I can now open all the files that crashed before!

@ideasman42: Thank you very much, this solved my problem. I can now open all the files that crashed before!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62707
No description provided.